force-app/bedrock/lib/async/objects/Async_Archive__c/Async_Archive__c.object-meta.xml
<CustomObject>
    <label>Async Archive</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Async Archive #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>