force-app/bedrock/lib/async/objects/Async_Archive__c/fields/Apex__c.field-meta.xml
<CustomField>
    <fullName>Apex__c</fullName>
    <label>Apex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>