force-app/bedrock/lib/async/objects/Async_Archive__c/fields/Error_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Error_Stack_Trace__c</fullName>
    <label>Error Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>