force-app/bedrock/lib/async/objects/Async_Archive__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
                <default>true</default>
                <label>Done</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>