force-app/bedrock/lib/async/objects/Async_Archive__c/fields/Thread__c.field-meta.xml
<CustomField>
    <fullName>Thread__c</fullName>
    <label>Thread</label>
    <length>255</length>
    <type>Text</type>
</CustomField>